@@ -40,7 +40,7 @@ void gui_copy_html(GtkWidget *html_widget);
 void gui_copyhtml_activate(GtkMenuItem * menuitem, gpointer user_data);
 gchar *gui_get_word_or_selection(GtkWidget *html_widget, gboolean word);
 gchar *gui_button_press_lookup(GtkWidget *html_widget);
-void gui_html_print(GtkWidget * htmlwidget);
+void gui_html_print(GtkWidget * htmlwidget, gboolean preview);
 
 #ifdef __cplusplus
 }
